<resources>
    <string name="app_name">CoreBooster</string>
    <string name="main">Main</string>
    <string name="dark_theme_string">Dark theme</string>
    <string name="gamer_theme_string">Gamer theme</string>
    <string name="action_settings">About</string>
    <string name="high">High boost</string>
    <string name="game">Ultra Gaming Mode</string>
    <string name="UFC">Click for Ultra Fast Charging</string>
    <string name="UFC_TITLE">Charging</string>
    <string name="smrc">Smart RAM Cleaning</string>
    <string name="sor">Help</string>
    <string name="upsm">Ultra Power Saving Mode</string>
    <string name="sorular">Ultra gaming mode: SD Card writing and reading will be increased. CPU frequence will be increased for full performance. \n High boost: CPU frequence will be increased (limited) </string>
    <string name="pil">Battery Saver</string>
    <string name="storage_per">External storage percentage</string>
    <string name="current_mode_string">Current mode: </string>
    <string name="PROGRAMMED">powered by Electroware Technologies</string>
    <string name="close">no boost</string>
    <string name="ccleaned">Cache cleaning completed !</string>
    <string name="ccache">Clear cache</string>
    <string name="ccnoneed">No need for cleaning cache now</string>
    <string name="ccache_progress">Clearing cache and optimizing...</string>
    <string name="total_size_of_storage">External storage total size (except system): </string>
    <string name="satin_al">Buy Ultra Gaming Mode</string>
    <string name="temp">Temperature: </string>
    <string name="like">LIKE US ON FACEBOOK</string>
    <string name="warn">Warning !</string>
    <string name="avalaible_size_of_storage">Avalaible external storage: </string>
    <string name="op">This mode requires root permission. You can boost your app from app booster (.</string>
    <string name="no_root">Your device has not rooted</string>
    <string name="ram1"> 75% of your RAM is full. Do you want to clean it ?</string>
    <string name="ram2">Yes</string>
    <string name="ram3">No</string>
    <string name="choose_app_for_boost">Choose app for boosting</string>
    <string name="root">Your device has rooted</string>
    <string name="exp_ultra">Ultra acceleration has started</string>
    <string name="exp_high">High acceleration has started</string>
    <string name="buy3">buy</string>
    <string name="batteryTemp">Battery Temperature: </string>
    <string name="c"> °C</string>
    <string name="o">Okay</string>
    <string name="temp2">Your device temperature is high. We recommend do not use Ultra Gaming mode until it cools down.</string>
    <string name="boost">Boosting and fixing RAM problems... This can take 5-10 seconds</string>
    <string name="clean"> MB RAM cleaned.</string>
    <string name="no_clean">Şu anda RAM i temizlemeye gerek yok</string>
    <string name="exp_no">All modes has killed.</string>
    <string name="good_ram_state">RAM State: Good</string>
    <string name="bad_ram_state">RAM State: Bad</string>
    <string name="ram_usage_warn">(It warns you when RAM usage bigger than %75)</string>
    <string name="avail_ram">Available RAM: </string>
    <string name="top_ram">RAM Size: </string>
    <string name="ai_game">Alien Invasion</string>
    <string name="ram_percentage">RAM percentage</string>
    <string name="aac">Device stability state: Bad, click for fix performance issues</string>
    <string name="abc">Device stability state: Good !</string>
    <string name="ram_CLEANED">RAM has cleaned</string>
    <string name="buy">Unlock feature</string>
    <string name="perf">Welcome to the perfection</string>
    <string name="s">Start now</string>
    <string name="slowwwww">Slowing Applications</string>
    <string name="ram_optimizing">Optimizing RAM...</string>
    <string name="aaa">Running apps on background</string>
    <string name="aab">Device state: </string>
    <string name="abd">Issues center</string>
    <string name="charge_notif">Fast charging notification</string>
    <string name="abe">There is no issue !</string>
    <string name="charge_level">Charge level</string>
    <string name="no_need_For_boost">No need for boosting. Your device seems stable.</string>
    <string name="fixxxx">Some applications is consumpting your CPU and RAM !</string>
    <string name="ram_yonetimi">RAM Management</string>
    <string name="fix_this">FIX THIS ISSUE NOW</string>
    <string name="app">App &amp; game booster</string>
    <string name="ultra_text">Ultra Boost enabled</string>
    <string name="fix_errors">Boost now</string>
    <string name="dis">DISABLE</string>
    <string name="performance_issues">Performance Issue</string>
    <string name="d">DISABLE</string>
    <string name="extra">EXTRA BOOSTING</string>
    <string name="kill_all">KILL ALL</string>
    <string name="hibernate_All">HIBERNATE ALL</string>
    <string name="high_text">High Boost enabled</string>
    <string name="load">loading</string>
    <string name="sicaklik">Temp: (your device has not a temp sensor)</string>
    <string name="buy2">You tasted Ultra Gaming mode, unlock Ultra Gaming Mode for more ultra speed gaming.</string>
    <string name="appwidget_text">Booster</string>
    <string name="add_widget">Add widget</string>

</resources>
